# Children-Companion-Scenario-Pipeline

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  build_child_dataset.sh  build_child_dataset_api.sh  constraints.txt  history.py  main.sh  pyproject.toml  run_assistant_responses.sh  run_tts.sh
api_call/: api_call_final.py  api_call_gpt54.py  api_call_qwen.py  audio_to_text.py  retry_policy.py  validate_api_modalities.py
api_call/local_api_logger/: logger.py  tracker.py
api_call/src/: process_message.py
data/audio/: video1_2岁萌宝对事物充满新鲜和好奇，满..._0.m4a  video2_放学的路上，聊天把妹妹聊哭了_0.m4a  video3_没想到AI对人类最大的帮助是哄娃_0.m4a
demo_page/: index.html  local_http.sh
outputs/: assistant_responses_multiturn.jsonl  assistant_responses_multiturn.qc_passed.jsonl  assistant_responses_with_tts.jsonl  assistant_responses_with_tts.qc_passed.jsonl
outputs/child_dataset/: child_labels.asr.jsonl  child_labels.template.jsonl  manifest.jsonl
outputs/qa/: stage2_5_gpt54_qc.jsonl  stage3_5_gemini_qc.jsonl
outputs/qc/: stage2_5_gpt54_qc.jsonl  stage3_5_gemini_qc.jsonl
outputs_autoasr/child_dataset/: manifest.jsonl
outputs_manualasr/: assistant_responses_multiturn.jsonl  assistant_responses_with_tts.jsonl
outputs_manualasr/child_dataset/: manifest.jsonl
scripts/: bootstrap_assets.py  build_dataset.py  build_dataset_api.py  deploy_cosyvoice.py
scripts/assistant/: criteria_text.py  generate_assistant_responses.py
scripts/dataset/: apply_qwen_asr_to_labels.py
scripts/demo/: generate_demo_page.py
scripts/qa/: qc_parse.py  verify_assistant_responses_gpt54.py  (+1 more)
(+101 files in other folders)
